--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -4,145 +4,161 @@
 
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizzeria Statica</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/mystyle.css"/>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Pizzeria Statica</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/mystyle.css"/>
+    </head>
+    <body>
   
-    <header>
+        <header>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">La mia pizzeria</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Home/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">News</a>
-                        </li> 
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Home/UserIndex">User page</a>
-                        </li>
-                    </ul>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary py-3">
+                <div class="container-fluid">
+                <a class="navbar-brand fw-bold" href="/Home/Index">La mia pizzeria</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Home/Privacy">Privacy</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">News</a>
+                            </li> 
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Home/UserIndex">User page</a>
+                            </li>
+                        </ul>
                    
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <main>
+        <main>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
 
-                    <h1 class="py-4">La mia pizzeria</h1>
+                        <h1 class="py-4 fw-bold">La mia pizzeria</h1>
 
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Immagine</th>
-                                    <th scope="col">Nome</th>
-                                    <th scope="col">Descrizione</th>
-                                    <th scope="col">Prezzo</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>
-                                        <img src="~/img/margherita.webp" alt="Immagine pizza margherita"/>
-                                    </td>
-                                    <td>Pizza Margherita</td>
-                                    <td>La pizza Margherita è la tipica pizza, condita con pomodoro, mozzarella, basilico fresco, sale e olio; è, assieme alla pizza marinara, la più popolare pizza italiana. per l'impasto: farina di grano tenero (tipo 0 o 00, o una miscela di entrambi), lievito naturale o lievito di birra, sale e acqua.</td>
-                                    <td>€ 6,50</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>
-                                    <img src="~/img/pizza_quattro_stagioni.jpg" alt="Immagine pizza quattro stagioni"/>
-                                    </td>
-                                    <td>Pizza Quattro Stagioni</td>
-                                    <td>Il tratto distintivo della pizza Quattro Stagioni è quello di essere divisa in quattro spicchi che rappresentano le quattro stagioni, ogni spicchio è farcito con ingredienti diversi, la versione più classica prevede uno spicchio con prosciutto cotto, uno con olive nere, un altro con carciofini sott'olio e l'ultimo con i funghi. </td>
-                                    <td>€ 9,00</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>
-                                    <img src="~/img/pizza-vegetariana.jpg" alt="Immagine pizza vegetariana"/>
-                                    </td>
-                                    <td>Pizza Vegetariana</td>
-                                    <td>La pizza Vegetariana è una delle più apprezzate, perché la prepariamo con le primizie dell’orto come i peperoni, le melanzane e le zucchine, che prima grigliamo leggermente, e poi finiamo di cuocere insieme alla pizza nel forno a legna.</td>
-                                    <td>€ 8,50</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>
-                                    <img src="~/img/pizza_diavola.jpg" alt="Immagine pizza diavola"/>
-                                    </td>
-                                    <td>Pizza Diavola</td>
-                                    <td>La pizza diavola è una delle pizze più gustose, nonostante la semplicità dei suoi ingredienti. Questa specialità viene servita con salamino piccante e mozzarella.Con il suo sapore deciso e filante è perfetta in tutte le stagioni.</td>
-                                    <td>€ 8,50</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td>
-                                    <img src="~/img/pizza_formaggi.jpg" alt="Immagine pizza quattro formaggi" />
-                                    </td>
-                                    <td>Pizza Quatttro Formaggi</td>
-                                    <td>La pizza ai quattro formaggi è una varietà di pizza che viene condita con quattro tipi di formaggio, molto gustosa e dal gusto intenso.</td>
-                                    <td>€ 8,50</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">6</th>
-                                    <td>
-                                    <img src="~/img/pizza-primavera.jpg" alt="Immagine pizza primavera" />
-                                    </td>
-                                    <td>Pizza Primavera</td>
-                                    <td>La Pizza primavera è una variante di pizza, fresca, buona pronta da mangiare anche fredda se si vuole, per una variante della pizza classica.</td>
-                                    <td>€ 7,50</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">7</th>
-                                    <td>
-                                    <img src="~/img/pizza-salsiccia-funghi.jpg" alt="Immagine pizza funghi porcini e sasiccia" />
-                                    </td>
-                                    <td>Pizza Funghi Porcini e Salsiccia</td>
-                                    <td>La sua farcitura è eccezionalmente ricca e saporita grazie alla salsa di pomodoro, mozzarella, funghi trifolati e salsiccia!.</td>
-                                    <td>€ 9,00</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">8</th>
-                                    <td>
-                                    <img src="~/img/pizza-wurstel-e-patatine.jpg" alt="Immagine pizza wurstel e patatine" />
-                                    </td>
-                                    <td>Pizza Wurstel e Patatine</td>
-                                    <td>Una soffice pasta extra sottile abbraccia tutto il gusto di questa pizza sfiziosa e irresistibile ricca di farcitura con salsa di pomodoro, mozzarella fresca filante, patatine fritte e Wurstel a rondelle.</td>
-                                    <td>€ 8,00</td>
-                                </tr>
-                            </tbody>
-                        </table>                  
+                            <table class="table">
+                                <thead>
+                                    <tr class="mt-5">
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Immagine</th>
+                                        <th scope="col">Nome</th>
+                                        <th scope="col">Descrizione</th>
+                                        <th scope="col">Prezzo</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>
+                                            <img src="~/img/margherita.webp" alt="Immagine pizza margherita"/>
+                                        </td>
+                                        <td>Pizza Margherita</td>
+                                        <td>La pizza Margherita è la tipica pizza, condita con pomodoro, mozzarella, basilico fresco, sale e olio; è, assieme alla pizza marinara, la più popolare pizza italiana. per l'impasto: farina di grano tenero (tipo 0 o 00, o una miscela di entrambi), lievito naturale o lievito di birra, sale e acqua.</td>
+                                        <td>€ 6,50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>
+                                        <img src="~/img/pizza_quattro_stagioni.jpg" alt="Immagine pizza quattro stagioni"/>
+                                        </td>
+                                        <td>Pizza Quattro Stagioni</td>
+                                        <td>Il tratto distintivo della pizza Quattro Stagioni è quello di essere divisa in quattro spicchi che rappresentano le quattro stagioni, ogni spicchio è farcito con ingredienti diversi, la versione più classica prevede uno spicchio con prosciutto cotto, uno con olive nere, un altro con carciofini sott'olio e l'ultimo con i funghi. </td>
+                                        <td>€ 9,00</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>
+                                        <img src="~/img/pizza-vegetariana.jpg" alt="Immagine pizza vegetariana"/>
+                                        </td>
+                                        <td>Pizza Vegetariana</td>
+                                        <td>La pizza Vegetariana è una delle più apprezzate, perché la prepariamo con le primizie dell’orto come i peperoni, le melanzane e le zucchine, che prima grigliamo leggermente, e poi finiamo di cuocere insieme alla pizza nel forno a legna.</td>
+                                        <td>€ 8,50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">4</th>
+                                        <td>
+                                        <img src="~/img/pizza_diavola.jpg" alt="Immagine pizza diavola"/>
+                                        </td>
+                                        <td>Pizza Diavola</td>
+                                        <td>La pizza diavola è una delle pizze più gustose, nonostante la semplicità dei suoi ingredienti. Questa specialità viene servita con salamino piccante e mozzarella.Con il suo sapore deciso e filante è perfetta in tutte le stagioni.</td>
+                                        <td>€ 8,50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">5</th>
+                                        <td>
+                                        <img src="~/img/pizza_formaggi.jpg" alt="Immagine pizza quattro formaggi" />
+                                        </td>
+                                        <td>Pizza Quatttro Formaggi</td>
+                                        <td>La pizza ai quattro formaggi è una varietà di pizza che viene condita con quattro tipi di formaggio, molto gustosa e dal gusto intenso.</td>
+                                        <td>€ 8,50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">6</th>
+                                        <td>
+                                        <img src="~/img/pizza-primavera.jpg" alt="Immagine pizza primavera" />
+                                        </td>
+                                        <td>Pizza Primavera</td>
+                                        <td>La Pizza primavera è una variante di pizza, fresca, buona pronta da mangiare anche fredda se si vuole, per una variante della pizza classica.</td>
+                                        <td>€ 7,50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">7</th>
+                                        <td>
+                                        <img src="~/img/pizza-salsiccia-funghi.jpg" alt="Immagine pizza funghi porcini e sasiccia" />
+                                        </td>
+                                        <td>Pizza Funghi Porcini e Salsiccia</td>
+                                        <td>La sua farcitura è eccezionalmente ricca e saporita grazie alla salsa di pomodoro, mozzarella, funghi trifolati e salsiccia!.</td>
+                                        <td>€ 9,00</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">8</th>
+                                        <td>
+                                        <img src="~/img/pizza-wurstel-e-patatine.jpg" alt="Immagine pizza wurstel e patatine" />
+                                        </td>
+                                        <td>Pizza Wurstel e Patatine</td>
+                                        <td>Una soffice pasta extra sottile abbraccia tutto il gusto di questa pizza sfiziosa e irresistibile ricca di farcitura con salsa di pomodoro, mozzarella fresca filante, patatine fritte e Wurstel a rondelle.</td>
+                                        <td>€ 8,00</td>
+                                    </tr>
+                                </tbody>
+                            </table>                  
                 
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+
+        <footer class="py-4 border-top d-flex justify-content-around align-items-center">
+            <div class="d-flex align-items-center">
+                 <a href="/">
+                <img width="60" src="~/img/pizza_logo.jpg" class="logo me-4" alt="Immagine logo" />
+                 </a>
+                 <p class="fw-bold">La mia pizzeria</p>
+             </div>
+             <ul class="nav col-md-4 d-flex justify-content-between align-items-end">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+             </ul>
+        </footer>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </body>
 </html>
