--- a/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
@@ -9,10 +9,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>La pizzeria</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/mystyleuser.css" />
     </head>
-    <body>
+    <body class="item">
+    <div class="container py-5">
 
-        <h1 class="my-5 text-center">Benvenuto cliente, nel sito della mia Pizzeria!</h1>
+        <h1 class="text-danger text-center display-2 mt-4 fw-bold">Benvenuto nel sito della mia pizzeria</h1>
+        </div>
 
 
 
