--- a/la-mia-pizzeria-static/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/Index.cshtml
@@ -142,9 +142,9 @@
         </main>
 
         <footer class="py-4 border-top d-flex justify-content-around align-items-center">
-            <div class="d-flex align-items-center">
+            <div class="d-flex justify-content-center align-items-end">
                  <a href="/">
-                <img width="60" src="~/img/pizza_logo.jpg" class="logo me-4" alt="Immagine logo" />
+                    <img width="50" src="~/img/pizza_logo.jpg" class="logo me-4" alt="Immagine logo" />
                  </a>
                  <p class="fw-bold">La mia pizzeria</p>
              </div>
